# otus6

./: CMakeLists.txt  cint.hpp  list2.hpp  main.cpp  vector2.hpp
tests/: CMakeLists.txt  cint.hpp  generic_tests.cpp  list2_tests.cpp  vector2_tests.cpp
